Bug 219838 - golang module no longer builds for v1.2.74
Summary: golang module no longer builds for v1.2.74
Status: RESOLVED CODE_FIX
Alias: None
Product: Tools
Classification: Unclassified
Component: libcap (show other bugs)
Hardware: All Linux
: P3 normal
Assignee: Andrew G. Morgan
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-04 01:32 UTC by frank
Modified: 2025-03-04 18:27 UTC (History)
1 user (show)

See Also:
Kernel Version:
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description frank 2025-03-04 01:32:51 UTC
The latest golang module, v1.2.74, no longer builds. This is because `psx.c` contains an include to `libpsx.h` but refers to it via relative path of the parent dir, and it assumes the parent dir is named `psx`. With go modules that is not the case; the parent dir includes a version tag.

Here is `go build` output for go1.22.9 but it's identical for the latest golang.


```
cd /home/frank/.gvm/pkgsets/go1.22.9/global/pkg/mod/kernel.org/pub/linux/libs/security/libcap/psx@v1.2.74
TERM='dumb' CGO_LDFLAGS='"-O2" "-g"' /home/frank/.gvm/gos/go1.22.9/pkg/tool/linux_amd64/cgo -objdir $WORK/b502/ -importpath kernel.org/pub/linux/libs/security/libcap/psx -- -I $WORK/b502/ -O2 -g ./psx_cgo.go
cd $WORK/b502
TERM='dumb' gcc -I /home/frank/.gvm/pkgsets/go1.22.9/global/pkg/mod/kernel.org/pub/linux/libs/security/libcap/psx@v1.2.74 -fPIC -m64 -pthread -Wl,--no-gc-sections -fmessage-length=0 -ffile-prefix-map=$WORK/b502=/tmp/go-build -gno-record-gcc-switches -I $WORK/b502/ -O2 -g -frandom-seed=7lBVg4UsFiPKmDKFLrC_ -o $WORK/b502/_x001.o -c _cgo_export.c
TERM='dumb' gcc -I /home/frank/.gvm/pkgsets/go1.22.9/global/pkg/mod/kernel.org/pub/linux/libs/security/libcap/psx@v1.2.74 -fPIC -m64 -pthread -Wl,--no-gc-sections -fmessage-length=0 -ffile-prefix-map=$WORK/b502=/tmp/go-build -gno-record-gcc-switches -I $WORK/b502/ -O2 -g -frandom-seed=7lBVg4UsFiPKmDKFLrC_ -o $WORK/b502/_x002.o -c psx_cgo.cgo2.c
cd /home/frank/.gvm/pkgsets/go1.22.9/global/pkg/mod/kernel.org/pub/linux/libs/security/libcap/psx@v1.2.74
TERM='dumb' gcc -I . -fPIC -m64 -pthread -Wl,--no-gc-sections -fmessage-length=0 -ffile-prefix-map=$WORK/b502=/tmp/go-build -gno-record-gcc-switches -I $WORK/b502/ -O2 -g -frandom-seed=7lBVg4UsFiPKmDKFLrC_ -o $WORK/b502/_x003.o -c psx.c
# kernel.org/pub/linux/libs/security/libcap/psx
psx.c:32:10: fatal error: ../psx/libpsx.h: No such file or directory
   32 | #include "../psx/libpsx.h"
      |          ^~~~~~~~~~~~~~~~~
compilation terminated.
```
Comment 1 Andrew G. Morgan 2025-03-04 02:53:30 UTC
Thanks for reporting this! There is evidently a difference between the result of building after

go mod vendor

and trying to build from the package directly. I'll figure out how to work 
around this.
Comment 2 Andrew G. Morgan 2025-03-04 03:16:12 UTC
Please try this version:

   kernel.org/pub/linux/libs/security/libcap/psx@v1.2.75-rc1

and report back.
Comment 4 frank 2025-03-04 08:34:10 UTC
The updated version worked.
Comment 5 Andrew G. Morgan 2025-03-04 18:27:07 UTC
I've just released libcap-2.75 which contains only this fix.

Note You need to log in before you can comment on or make changes to this bug.