Fix psx module build.

Thanks to Frank for promptly reporting this:

   https://bugzilla.kernel.org/show_bug.cgi?id=219838

Signed-off-by: Andrew G. Morgan <morgan@kernel.org>